--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".search_transport"></activity>
-        <activity android:name=".MainMenu" />
-        <activity android:name=".ListTravels" />
-        <activity android:name=".SplashActivity">
+        <activity android:name=".ListSelfTrips">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".search_transport" />
+        <activity android:name=".MainMenu" />
+        <activity android:name=".ListTravels" />
+        <activity android:name=".SplashActivity">
+
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity" />
