--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Offer_transport"></activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,9 +22,7 @@
         <activity android:name=".search_transport" />
         <activity android:name=".MainMenu" />
         <activity android:name=".ListSelfTrips" />
-        <activity android:name=".ListTravels">
-
-        </activity>
+        <activity android:name=".ListTravels"></activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity" />
     </application>
